@@ -2031,9 +2031,10 @@ void AstRefDType::dump(std::ostream& str) const {
         if (!s_recursing) {  // Prevent infinite dump if circular typedefs
             s_recursing = true;
             str << " -> ";
-            if (const auto subp = typedefp()) {
+            if (const auto subp = subDTypep()) {
+                if (typedefp()) str << "typedef=" << static_cast<void*>(typedefp())<< " -> ";
                 subp->dump(str);
-            } else if (const auto subp = subDTypep()) {
+            } else if (const auto subp = typedefp()) {
                 subp->dump(str);
             }
             s_recursing = false;
